Sticky Option in Floor Constraint for Bones Not Working #65683

Closed
opened 2019-06-10 09:13:20 +02:00 by Fernando Spadea · 8 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: Intel(R) HD Graphics 520 Intel 4.5.0 - Build 25.20.100.6373

Blender Version
Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-09 21:43, hash: 030c7df19d
Worked: (optional)

Short description of error
The sticky option of the floor constraint does not work. I tried to use it in Blender 2.79 and it worked fine, so I'm pretty sure it's not user error on my end.

Exact steps for others to reproduce the error
The attached Blend file has a bone set up above a plane with it as its floor and the sticky option marked, but, if you try to move it across the floor, it will not stick. This is a new Blender file that I made specifically for this so there are not really many extra details involved. I created a plane object and then scaled it up. I then made a bone (raised it a little) and applied the bone constraint and checked "Sticky".
Floor Error.blend

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: Intel(R) HD Graphics 520 Intel 4.5.0 - Build 25.20.100.6373 **Blender Version** Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-09 21:43, hash: `030c7df19d` Worked: (optional) **Short description of error** The sticky option of the floor constraint does not work. I tried to use it in Blender 2.79 and it worked fine, so I'm pretty sure it's not user error on my end. **Exact steps for others to reproduce the error** The attached Blend file has a bone set up above a plane with it as its floor and the sticky option marked, but, if you try to move it across the floor, it will not stick. This is a new Blender file that I made specifically for this so there are not really many extra details involved. I created a plane object and then scaled it up. I then made a bone (raised it a little) and applied the bone constraint and checked "Sticky". [Floor Error.blend](https://archive.blender.org/developer/F7097547/Floor_Error.blend)

Added subscriber: @fespadea

Added subscriber: @fespadea

Added subscriber: @sozap

Added subscriber: @sozap

you forgot to attach the .blend file :)

you forgot to attach the .blend file :)

Added subscribers: @brecht, @ZedDB

Added subscribers: @brecht, @ZedDB
Brecht Van Lommel was assigned by Sebastian Parborg 2019-06-20 11:39:31 +02:00

@brecht Sergey and I looked into this and this is really old feature that never really worked reliably. The initial commit from 2005 even states as much.

The sticky option is dependent on time and will break when jumping around the timeline (or during frame skip etc).

Because of CoW, the code in question doesn't work at all right now because constraints can't save data or manipulate it's own data during evaluation.
(Which is intentional)

@brecht Sergey and I looked into this and this is really old feature that never really worked reliably. The initial commit from 2005 even states as much. The sticky option is dependent on time and will break when jumping around the timeline (or during frame skip etc). Because of CoW, the code in question doesn't work at all right now because constraints can't save data or manipulate it's own data during evaluation. (Which is intentional)

Yes, I think it can be removed.

Yes, I think it can be removed.
Brecht Van Lommel removed their assignment 2019-06-24 15:41:49 +02:00
Sergey Sharybin was assigned by Brecht Van Lommel 2019-06-24 15:41:49 +02:00

This issue was referenced by 533e267e95

This issue was referenced by 533e267e95cf1115eebde95a67dc3b05d48e6ffd

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65683
No description provided.